[partial] I'm comitting this work even though it's unfinished as I need to move on to something else. I'm in the process of fixing the layout issues in IE7

--- a/src/components/c-input-container/style.styl
+++ b/src/components/c-input-container/style.styl
@@ -23,6 +23,7 @@
 	select {
 		display: block;
 		width: 100%;
+		max-width: 100%;
 		margin-top: $spacing*.5;
 		padding: $spacing $spacing*.6;
 		border: 1px solid lighten($border, 30%);
