--- a/src/globals/css/layouts.ie.styl
+++ b/src/globals/css/layouts.ie.styl
@@ -2,11 +2,19 @@
 .l-main {
   .l-primary {
     width:68%;
-    margin-right: 2%;
+    margin-right: 0;
+    &:first-child {
+      margin-left: 0;
+      margin-right: 2%;
+    }
   }
   .l-secondary {
     width:30%;
     margin-right: 0;
+    &:first-child {
+      margin-left: 0;
+      margin-right: 2%;
+    }
   }
 }
 
